# er_public_msgs-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
msg/: ComponentStatus.msg  ComponentStatusArray.msg  JointConfiguration.msg  JointConfigurationCommand.msg  Payload.msg  Status.msg  StringPair.msg  StringPairArray.msg  TransformCommand.msg
srv/: GetPose2D.srv  GetStatus.srv  GetStringArray.srv  GetStringPairArray.srv  RegisterComponentStatusTopic.srv  SetFloat.srv  SetJointConfiguration.srv  SetPayload.srv  SetPose2D.srv  SetProgram.srv  SetString.srv  SetTransform.srv
