<?xml version="1.0"?>
<package format="2">
  <name>er_public_msgs</name>
  <version>1.1.0</version>
  <description>Enabled Robotics public messages package</description>

  <maintainer email="nah@enabled-robotics.com">niels</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/er_public_msgs</url> -->

  <author email="nah@enabled-robotics.com">niels</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
